backend/service-discovery/discovery-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
        - name: service-discovery
          image: aron918/service-discovery-tele-insight-capstone-project:6f55f4f8f885f6772c5ba8f3b9c6ac724c5dd5e0
          ports:
            - containerPort: 8761
