backend/service-discovery/discovery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: tele.insight.discovery.a.gebeyalearning.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-discovery
            port:
              number: 8761
